# exchanges

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
binance/: Cargo.toml
binance/examples/: account.rs  public.rs
binance/src/: api.rs  auth.rs  builder.rs  client.rs  constant.rs  error.rs  lib.rs  prelude.rs  response.rs  util.rs
bitfinex/: Cargo.toml
bitfinex/examples/: bitfinex_deposit_address.rs
bitfinex/src/: auth.rs  client.rs  constant.rs  error.rs  lib.rs  prelude.rs  request.rs  response.rs
coinbase/: Cargo.toml
coinbase/examples/: accounts.rs
coinbase/src/: lib.rs  prelude.rs
coinbase/src/app/: agent.rs  builder.rs  client.rs  constant.rs  error.rs  mod.rs  response.rs
coinbase/src/app/auth/: jwt.rs  mod.rs
coinbase/src/util/: mod.rs  time.rs
common/: Cargo.toml
common/src/: deser.rs  lib.rs
kraken/: Cargo.toml
kraken/examples/: deposit_address.rs
kraken/src/: client.rs  error.rs  request.rs  response.rs
okx/: Cargo.toml
okx/examples/: okx_deposit_address.rs
okx/src/: auth.rs  client.rs  constant.rs  error.rs  lib.rs  prelude.rs  response.rs  util.rs
strike/: Cargo.toml
strike/examples/: strike_deposit_address.rs
strike/src/: client.rs  error.rs  response.rs
