[workspace]
members = [
    "kraken",
    "strike",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
rust-version = "1.85.0"
publish = false

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = "1"
url = "2.5"
