[package]
name = "binance-api"
version = "0.3.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
common.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing = "0.1"
sha2.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
