[package]
name = "bitfinex-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
hmac.workspace = true
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha3 = "0.10"
thiserror.workspace = true
url.workspace = true
