[package]
name = "coinbase-api"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
common.workspace = true
p256 = { version = "0.13", features = ["pem", "pkcs8"] }
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
ring = "0.17"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
