[package]
name = "kraken-api"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
base64 = "0.22"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
