[package]
name = "okx-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
common.workspace = true
hmac.workspace = true
reqwest = { workspace = true, features = ["http2", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_path_to_error = "0.1"
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
