[package]
name = "strike-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
common.workspace = true
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
